--- a/posts/2023-08-20-week-33.md
+++ b/posts/2023-08-20-week-33.md
@@ -18,4 +18,4 @@ tags:
 - I finished watching _[The Righteous Gemstones](The%20Righteous%20Gemstones.md)_, and I miss them already. 
 - Anja's still off for the summer, and I'm watching her slowly recover from being my personal chauffeur for two weeks
 - The Summer makes me not want to cook. It's no help that I'm using [Annelie](https://anneliewambeek.com/)'s apartment to work while she's travelling, and that I use the occasion to order poke bowls for lunch. I'm surprised by the quality of [Poke Perfect](https://pokeperfect.nl/en/amsterdam/linnaeusstraat/)'s teriyaki chicken bowl, extra edamame. 
-- I'm reading and enjoying Robin Meyer's _[Saving Jesus From the Church](Saving%20Jesus%20From%20the%20Church.md)_, a tool to make my interest in [orthopraxy](../Orthopraxy.md) more tangible.
+- I'm reading and enjoying Robin Meyer's _[Saving Jesus From the Church](Saving%20Jesus%20From%20the%20Church.md)_, a tool to make my interest in [orthopraxy](orthopraxy.md) more tangible.
