PUSH NOTE : 2023-11-26-week-47.md

--- a/posts/2023-11-26-week-47.md
+++ b/posts/2023-11-26-week-47.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 47: Geert Milders"
+title: "Week 47: Geert Milders (#20)"
 date: 2023-11-25 10:16:15 +0200
 excerpt: ""
 tags:
