--- a/posts/2023-09-10-week-36.md
+++ b/posts/2023-09-10-week-36.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 36: Homecoming"
+title: "Week 36: Homecoming (#16)"
 date: 2023-09-10 20:21:15 +0200
 excerpt: ""
 tags:
