--- a/posts/2023-10-01-week-39.md
+++ b/posts/2023-10-01-week-39.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 39: Small escapes"
+title: "Week 39: Small escapes (#18)"
 date: 2023-10-01 10:16:15 +0200
 excerpt: ""
 tags:
