PUSH NOTE : 2023-07-09-week-27.md

--- a/posts/2023-07-09-week-27.md
+++ b/posts/2023-07-09-week-27.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 27: Haven"
+title: "Week 27: Haven (#13)"
 date: 2023-07-09
 excerpt: Office party, safe space, sad television
 tags:
