--- a/posts/2023-07-01-week-26.md
+++ b/posts/2023-07-01-week-26.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 26: Keti Koti"
+title: "Week 26: Keti Koti (#12)"
 date: 2023-07-01
 excerpt: Onboarding, national holiday, book
 tags:
@@ -23,4 +23,4 @@ On Saturday, Anja and I watched Keti Koti's [Bigi Spikri memorial service](https
 
 In the afternoon we made our way to Museumplein for the Keti Koti festival. Upside: I got to eat cotton candy, twice, and we got to financially contribute to many great Black causes in the city. Downside: I spent way too much time in line for food with hundreds of other people. 
 
-Reading! I finished a book. I have a track record of struggling to enjoy reading as a burnt-out lit major, but [Citizen (2015)](Citizen%20(2015).md) was easy to get through. It turns out I am enthusiast of the lyric essay genre. I picked up a book of poetry by Anton de Kom at Keti Koti, and I'm diving head-first into that.
+Reading! I finished a book. I have a track record of struggling to enjoy reading as a burnt-out lit major, but [[Citizen (2015)|Citizen (2015)]] was easy to get through. It turns out I am enthusiast of the lyric essay genre. I picked up a book of poetry by Anton de Kom at Keti Koti, and I'm diving head-first into that.
