PUSH NOTE : 2022-11-27-week-47.md

--- a/posts/2022-11-27-week-47.md
+++ b/posts/2022-11-27-week-47.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 47: Booster"
+title: "Week 47: Booster (#8)"
 excerpt: ""
 date: 2022-11-27
 tags:
