PUSH NOTE : 2022-03-26-week-12.md

--- a/posts/2022-03-26-week-12.md
+++ b/posts/2022-03-26-week-12.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 12: Bonsoihoir"
+title: "Week 12: Bonsoihoir (#3)"
 excerpt: ""
 date: 2022-03-26
 faces:
