--- a/posts/2021-04-18-week-15.md
+++ b/posts/2021-04-18-week-15.md
@@ -3,7 +3,7 @@ date: 2021-04-18
 share: true
 section: posts
 draft: false
-title: "Week 15: Streak"
+title: "Week 15: Streak (#3)"
 excerpt: ""
 tags:
   - weeknotes
