--- a/posts/2021-01-17-week-2.md
+++ b/posts/2021-01-17-week-2.md
@@ -3,7 +3,7 @@ date: 2021-01-17
 share: true
 section: posts
 draft: false
-title: "Week 2: Home office"
+title: "Week 2: Home office (#2)"
 excerpt: ""
 tags:
   - weeknotes
