PUSH NOTE : 2021-04-18-week-15-no-2.md

--- a/posts/2021-04-18-week-15-no-2.md
+++ b/posts/2021-04-18-week-15-no-2.md
@@ -3,7 +3,7 @@ date: 2021-04-18
 share: true
 section: posts
 draft: false
-title: "Week 15: Streak (no.2)"
+title: "Week 15: Streak (#2)"
 excerpt: ""
 tags:
   - weeknotes
