--- a/posts/2021-01-17-week-2-no-1.md
+++ b/posts/2021-01-17-week-2-no-1.md
@@ -3,7 +3,7 @@ date: 2021-01-17
 share: true
 section: posts
 draft: false
-title: "Week 2: Home office (no.1)"
+title: "Week 2: Home office (#1)"
 excerpt: ""
 tags:
   - weeknotes
