PUSH NOTE : 2022-11-06-week-44-no-7.md

--- a/posts/2022-11-06-week-44-no-7.md
+++ b/posts/2022-11-06-week-44-no-7.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 44: Coat (no.7)"
+title: "Week 44: Coat (#7)"
 excerpt: ""
 date: 2022-11-06
 tags:
