--- a/posts/2023-03-12-week-10-no-19.md
+++ b/posts/2023-03-12-week-10-no-19.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 10: Outings (no.10)"
+title: "Week 10: Outings (#10)"
 date: 2023-03-12
 excerpt: It snowed a few times this week and I was as baffled as I always am to see it happening in March. I don’t have a great understanding of what the weather’s supposed to do in a given period of the year.
 tags:
