--- a/posts/2023-03-26-week-11-no-11.md
+++ b/posts/2023-03-26-week-11-no-11.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 11: Meeting Patrick (no.11)"
+title: "Week 11: Meeting Patrick (#11)"
 date: 2023-03-26
 excerpt: "I got to meet one of my Internet heroes this week: Patrick Rhone and his family were on a Europe trip, and I was lucky enough to catch the planning stage on his blog right in time to extend an invitation."
 tags:
