PUSH NOTE : 2023-07-01-week-26-no-12.md

--- a/posts/2023-07-01-week-26-no-12.md
+++ b/posts/2023-07-01-week-26-no-12.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 26: Keti Koti (no.12)"
+title: "Week 26: Keti Koti (#12)"
 date: 2023-07-01
 excerpt: Onboarding, national holiday, book
 tags:
