PUSH NOTE : 2023-08-20-week-33-no-14.md

--- a/posts/2023-08-20-week-33-no-14.md
+++ b/posts/2023-08-20-week-33-no-14.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 33: Landing (no.14)"
+title: "Week 33: Landing (#14)"
 date: 2023-08-20
 tags:
   - weeknotes
