PUSH NOTE : 2023-08-27-week-34-no-15.md

--- a/posts/2023-08-27-week-34-no-15.md
+++ b/posts/2023-08-27-week-34-no-15.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 34: Somerlust (no.15)"
+title: "Week 34: Somerlust (#15)"
 date: 2023-08-27 18:49:15 +0200
 excerpt: ""
 tags:
