--- a/posts/2023-09-17-week-37-no-17.md
+++ b/posts/2023-09-17-week-37-no-17.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 37: Rosh Hashanah (no.17)"
+title: "Week 37: Rosh Hashanah (#17)"
 date: 2023-09-17 08:49:15 +0200
 excerpt: ""
 tags:
