--- a/posts/2023-11-19-week-46-no-19.md
+++ b/posts/2023-11-19-week-46-no-19.md
@@ -2,7 +2,7 @@
 share: true
 section: posts
 draft: false
-title: "Week 46: Osama (no.19)"
+title: "Week 46: Osama (#19)"
 date: 2023-11-19 10:16:15 +0200
 excerpt: ""
 tags:
