--- a/posts/2024-01-07-week-1.md
+++ b/posts/2024-01-07-week-1.md
@@ -1,5 +1,5 @@
 ---
-title: "Week 1: miracle mornings"
+title: "Week 1: Miracle mornings"
 section: posts
 share: true
 date: 2024-01-07
@@ -16,4 +16,4 @@ tags:
 - We're continuing our _[[Better Call Saul (2015-2022)|Better Call Saul (2015-2022)]]_ journey, which, mid-way through season 2, seems to find itself in a bit of a legal lull. I wonder if it'll change. I wonder if I'll continue watching if it doesn't.
 - I've set a reading challenge on Goodreads this year, and this week I'm already down 1, 25 more to go. I've discovered that non-fiction audio books work well for me.
 - On Friday, we had farewell drinks for AN. I'm quite sad to see him go. He and I both have golden retriever energy, and it was always a bit of a homecoming to be at the office with him. 
-- On Saturday, I went to Coppenhagen for new beads. I've been looking for excuses to make more rosaries, and I decided I'll make one for each liturgical color
+- On Saturday, I went to Coppenhagen for new beads. I've been looking for excuses to make more rosaries, and I decided I'll make one for each liturgical color.
