--- a/2024-01-08-08-37-58.md
+++ b/2024-01-08-08-37-58.md
@@ -1,6 +1,6 @@
 ---
 share: true
-section: posts
+type: post
 title: ""
 date: 2024-01-08 08:37:58 +01:00
 ---
@@ -8,5 +8,6 @@ date: 2024-01-08 08:37:58 +01:00
 I spent the first part of my day off taking care of some details of my new site environment:
 - [x] Added h-card
 - [x] Added h-entry
+- [ ] Restructured content folder to fix [permalink problem](https://discourse.gohugo.io/t/permalinks-configuration-ignore-top-level-section/29520) 
 - [ ] Added webmention
 - [ ] Migrated blogroll to new site
