--- a/2023-11-26-week-47.md
+++ b/2023-11-26-week-47.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: "Week 47: Geert Milders"
-type: post
+type: posts
 date: 2023-11-25 10:16:15 +0200
 excerpt: ""
 tags:
