--- a/2023-11-12-16-46 GMT+1.md
+++ b/2023-11-12-16-46 GMT+1.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-11-12 16:46:50 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1699803988/sixmyf8niqpih1g7zhw7.jpg
 ---
