--- a/2023-11-10-06-16 GMT+1.md
+++ b/2023-11-10-06-16 GMT+1.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-11-10 06:17:01
 likeOf: https://www.inthein-between.com/looking-at-sabrina-by-lizz-thabet/
 ---
