--- a/2023-10-27-06-51 GMT+2.md
+++ b/2023-10-27-06-51 GMT+2.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-10-27 06:51:59 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1698382302/zmsdpnvi2ruw3hbtivpx.jpg
 ---
