--- a/2023-10-08-17-34 GMT+2.md
+++ b/2023-10-08-17-34 GMT+2.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-10-08 17:34:22 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1696779239/g4qybxerghcggtvoukwt.jpg
 ---
