--- a/2023-10-07-00-22 GMT+2.md
+++ b/2023-10-07-00-22 GMT+2.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-10-07 00:23:40 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1696630944/ojm04a426itdn1yg9tvv.heic
 ---
