--- a/2023-10-03-17-12 GMT+2.md
+++ b/2023-10-03-17-12 GMT+2.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-10-03 17:13:07 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1696345967/txhnhkhlbtukrb0ejtp0.jpg
 ---
