--- a/2023-10-02-12-42 GMT+2.md
+++ b/2023-10-02-12-42 GMT+2.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-10-02 12:43:23 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1696243371/rvdpjt3x0ahbsoqdwgzh.jpg
 ---
