--- a/2023-10-01-21-34 GMT+2.md
+++ b/2023-10-01-21-34 GMT+2.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-10-01 21:35:20 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1696188888/ad4n2opghogfcyyyigad.jpg
 ---
