--- a/2023-10-01-week-39.md
+++ b/2023-10-01-week-39.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: "Week 39: Small escapes"
-type: post
+type: posts
 date: 2023-10-01 10:16:15 +0200
 excerpt: ""
 tags:
