--- a/2023-09-23-08-47 GMT+2.md
+++ b/2023-09-23-08-47 GMT+2.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-09-23 08:48:20 +0200
 likeOf: https://thedieline.com/blog/2023/8/9/michael-bierut-on-design-before-and-after-the-computer-and-why-ai-might-not-be-so-bad-after-all
 ---
