PUSH NOTE : 2023-09-29-07-21 GMT+2.md

--- a/2023-09-29-07-21 GMT+2.md
+++ b/2023-09-29-07-21 GMT+2.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-09-29 07:22:48 +0200
 replyTo: https://popagandhi.com/posts/merantau-cino/
 ---
