--- a/2023-09-22-13-46 GMT+2.md
+++ b/2023-09-22-13-46 GMT+2.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-09-22 13:48:07 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1695383200/sot6g5mbfccxxii8s75a.jpg
 ---
