--- a/2023-09-17-week-37.md
+++ b/2023-09-17-week-37.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: "Week 37: Rosh Hashanah"
-type: post
+type: posts
 date: 2023-09-17 08:49:15 +0200
 excerpt: ""
 tags:
