--- a/2023-08-27-week-34.md
+++ b/2023-08-27-week-34.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: "Week 34: Somerlust"
-type: post
+type: posts
 date: 2023-08-27 18:49:15 +0200
 excerpt: ""
 tags:
