--- a/2023-08-05-00-00-01.md
+++ b/2023-08-05-00-00-01.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-08-05 00:00:01 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1696575775/016_noygjo.jpg
 category: instant
