--- a/2023-08-03-00-00-00.md
+++ b/2023-08-03-00-00-00.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-08-03 00:00:00 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1696575748/013_jblxft.jpg
 category: instant
