--- a/2023-07-31-00-00-01.md
+++ b/2023-07-31-00-00-01.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: ""
-type: post
+type: posts
 date: 2023-07-31 00:00:01 +0200
 photo: https://res.cloudinary.com/dbi2zounq/image/upload/v1696575747/007_iocwsu.jpg
 category: instant
