--- a/2023-07-22-pride-walk-2023.md
+++ b/2023-07-22-pride-walk-2023.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: What Pride means to me in 2023
-type: post
+type: posts
 date: 2023-07-22
 excerpt: Friends and I attend the annual Pride Walk
 tags:
