--- a/2023-07-01-week-26.md
+++ b/2023-07-01-week-26.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: "Week 26: Keti Koti"
-type: post
+type: posts
 date: 2023-07-01
 excerpt: Onboarding, national holiday, book
 tags:
