--- a/2022-11-06-week-16.md
+++ b/2022-11-06-week-16.md
@@ -3,7 +3,7 @@ share: true
 draft: false
 title: "Week 16: Springtime holidays"
 excerpt: ""
-type: post
+type: posts
 date: 2022-04-23
 tags:
   - weeknotes
