--- a/2022-04-02-week-13.md
+++ b/2022-04-02-week-13.md
@@ -3,7 +3,7 @@ share: true
 draft: false
 title: "Week 13: Recruiting"
 excerpt: ""
-type: post
+type: posts
 date: 2022-04-02
 tags:
   - weeknotes
