PUSH NOTE : 2020-12-15-33-things.md

--- a/2020-12-15-33-things.md
+++ b/2020-12-15-33-things.md
@@ -2,7 +2,7 @@
 share: true
 draft: false
 title: 33 things
-type: post
+type: posts
 date: 2020-12-15
 excerpt: Below is a list of thoughts, opinions, ideas, and tips that I've gathered in my 33rd year on Earth.
 tags:
