--- a/posts/2023-08-20-week-33.md
+++ b/posts/2023-08-20-week-33.md
@@ -19,4 +19,4 @@ tags:
 - I finished watching _[[The Righteous Gemstones|The Righteous Gemstones]]_, and I miss them already. 
 - Anja's still off for the summer, and I'm watching her slowly recover from being my personal chauffeur for two weeks
 - The Summer makes me not want to cook. It's no help that I'm using [Annelie](https://anneliewambeek.com/)'s apartment to work while she's travelling, and that I use the occasion to order poke bowls for lunch. I'm surprised by the quality of [Poke Perfect](https://pokeperfect.nl/en/amsterdam/linnaeusstraat/)'s teriyaki chicken bowl, extra edamame. 
-- I'm reading and enjoying Robin Meyer's _[[Saving Jesus From the Church|Saving Jesus From the Church]]_, a tool to make my interest in [[orthopraxy|orthopraxy]] more tangible.
+- I'm reading and enjoying Robin Meyer's _[[Saving Jesus From the Church (2009)|Saving Jesus From the Church (2009)]]_, a tool to make my interest in [[orthopraxy|orthopraxy]] more tangible.
