PUSH NOTE : 2024-01-14-week-2.md

--- a/posts/2024-01-14-week-2.md
+++ b/posts/2024-01-14-week-2.md
@@ -8,6 +8,7 @@ tags:
   - sleepover
   - being Black
   - All Saints
+  - reading
 ---
 
 - This week marked the week I got back into the swing of things at work. I tend to find the holiday season quite boring because things slow down quite a bit. Now that people are returning from their winter break, my to do list is filling up again with exciting projects, opportunities for collaboration, and research endeavors. As usual, a conversation with my manager reminded me how much I love my job.
